Fixes theme after add Cc and Bcc fields
After adding the fields Cc and Bcc the box to drag and drop the
attachments was misaligned, with this change it occupies again all the
available space.

--- a/themes/alps/assets/style.css
+++ b/themes/alps/assets/style.css
@@ -256,7 +256,7 @@ main.create-update .headers input {
 main.create-update #attachment-list {
   grid-column-start: 3;
   grid-row-start: 1;
-  grid-row-end: 5;
+  grid-row-end: 7;
 
   width: 25rem;
   height: 100%;
